fix: teste com arquivos com caminho errado e bufferedWrite sem o metódo close.